--- a/quartaaula.html
+++ b/quartaaula.html
@@ -20,7 +20,7 @@
 		<br>
 		<br>
 	  <label>Celular:</label>
-		<input type="text" required="required" value="(00) 9000-0000" maxlength="40">
+		<input type="text" required="required" placeholder="(00) 9000-0000" maxlength="40">
 		<br><br>
 	  <label>Mensagem:</label><br>
 		<textarea cols="80" rows="4" placeholder="Digite sua mensagem"></textarea>
