--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ a:hover, a:active {
 
 <h1>Página Principal</h1>
 	<ul>
-	  <li><a href="../Igor H/primeiraaula.html">Aula 1</a></li>
-	<li><a href="../Igor H/segundaaula.html">Aula 2</a></li>
-	<li><a href="../Igor H/terceiraaula.html">Aula 3</a></li>
+	  <li><a href="primeiraaula.html">Aula 1</a></li>
+	<li><a href="segundaaula.html">Aula 2</a></li>
+	<li><a href="terceiraaula.html">Aula 3</a></li>
 	<li><a href="quartaaula.html">Aula 4</a></li>	
 	</ul>
 	
