--- a/primeiraaula.html
+++ b/primeiraaula.html
@@ -34,5 +34,5 @@ ul {
 	
 <ul>	<p>Podemos criar os conteúdos dos sites incorporando os elementos por itens nos Menus (COMANDO), ou criamos o site programando (tags) com códigos em HTML, CSS e outras linguagens de programação web.</p></ul>
 </body>
-<a href="file:///D:/SAB08/Igor%20H/index.html."><img src="Adobe Express - file.png" width="202" height="202" alt=""/></a>
+<a href="index.html."><img src="Adobe Express - file.png" width="202" height="202" alt=""/></a>
 </html>
